# arrex

./: .readthedocs.yaml  README.md  build.py  generate_numbers.py  pyproject.toml  setup.py
arrex/: __init__.py  _arrex.c  _arrex.pxd  _arrex.pyx  dtypes.c  dtypes.pxd  dtypes.pyx  glm.py  list.c  list.pyx  numbers.c  numbers.py  numbers.pyx  numpy.py
docs/: conf.py  dtypes.rst  index.rst  list.rst  requirements.txt
docs/static/: custom.css
tests/: benchmark_numbers.py  benchmark_typedlist.py  benchmark_xarray.py  test_dtypes.py  test_memleak.py  test_numbers.py  test_typedlist.py  test_xarray.py
